<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Adv-r6-qPF">
    <device id="appleTV" orientation="landscape">
        <adaptation id="light"/>
    </device>
    <dependencies>
        <deployment identifier="tvOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Landing View Controller-->
        <scene sceneID="vpC-Ic-BbZ">
            <objects>
                <viewController storyboardIdentifier="LandingViewController" id="Adv-r6-qPF" customClass="LandingViewController" customModule="PlayformTVOS" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="zaW-uM-cu9"/>
                        <viewControllerLayoutGuide type="bottom" id="9kT-4g-orW"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="RC1-0g-keL">
                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWh-Vi-MwF">
                                <rect key="frame" x="687" y="828" width="546" height="86"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="38"/>
                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                <state key="normal" title="Sign in with Playform"/>
                                <connections>
                                    <action selector="didClickedAction:" destination="Adv-r6-qPF" eventType="primaryActionTriggered" id="tpz-Nz-AXC"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hxi-fz-bX3">
                                <rect key="frame" x="687" y="726" width="546" height="86"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="38"/>
                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                <state key="normal" title="Play without Sign in"/>
                                <connections>
                                    <segue destination="u37-Sv-sd1" kind="show" identifier="goToHomeView" id="kHq-Ia-EcR"/>
                                </connections>
                            </button>
                        </subviews>
                        <constraints>
                            <constraint firstAttribute="trailingMargin" secondItem="PWh-Vi-MwF" secondAttribute="trailing" constant="667" id="EGc-dc-N16"/>
                            <constraint firstItem="Hxi-fz-bX3" firstAttribute="leading" secondItem="RC1-0g-keL" secondAttribute="leadingMargin" constant="667" id="NmO-g2-kHB"/>
                            <constraint firstAttribute="trailingMargin" secondItem="Hxi-fz-bX3" secondAttribute="trailing" constant="667" id="YjI-ok-Nwr"/>
                            <constraint firstItem="PWh-Vi-MwF" firstAttribute="top" secondItem="Hxi-fz-bX3" secondAttribute="bottom" constant="16" id="bWT-eq-ddb"/>
                            <constraint firstItem="PWh-Vi-MwF" firstAttribute="leading" secondItem="RC1-0g-keL" secondAttribute="leadingMargin" constant="667" id="sCE-Ej-vtM"/>
                            <constraint firstItem="9kT-4g-orW" firstAttribute="top" secondItem="PWh-Vi-MwF" secondAttribute="bottom" constant="166" id="wJp-mD-ayV"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="signInButton" destination="PWh-Vi-MwF" id="85u-Ki-cRn"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VbB-bf-lRU" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="70" y="1381"/>
        </scene>
        <!--Home Tab Bar Controller-->
        <scene sceneID="J55-Av-l6U">
            <objects>
                <tabBarController storyboardIdentifier="HomeTabBarController" id="u37-Sv-sd1" customClass="HomeTabBarController" customModule="PlayformTVOS" customModuleProvider="target" sceneMemberID="viewController">
                    <nil key="simulatedBottomBarMetrics"/>
                    <tabBar key="tabBar" alpha="0.69999999999999996" contentMode="scaleToFill" id="JAP-5W-YNp">
                        <rect key="frame" x="0.0" y="0.0" width="1920" height="120"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="yrz-cP-TAa" kind="relationship" relationship="viewControllers" id="LwJ-gl-EyM"/>
                        <segue destination="zUT-YB-4wL" kind="relationship" relationship="viewControllers" id="OFX-sR-IbL"/>
                        <segue destination="pAh-fb-RjV" kind="relationship" relationship="viewControllers" id="uYk-Nw-Pvd"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="TLu-4o-11l" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3414" y="1381"/>
        </scene>
        <!--SettingsTabBar-->
        <scene sceneID="pHU-mr-xfp">
            <objects>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cTG-c5-9lG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <navigationController storyboardIdentifier="SettingsBarItem" id="yrz-cP-TAa" userLabel="SettingsTabBar" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="1" title="Settings" id="dHV-AJ-pyu" userLabel="Settings"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="b5E-Z1-bNu">
                        <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                </navigationController>
            </objects>
            <point key="canvasLocation" x="7308" y="649"/>
        </scene>
        <!--LogoutTabBar-->
        <scene sceneID="2JJ-35-Jab">
            <objects>
                <placeholder placeholderIdentifier="IBFirstResponder" id="v0H-AE-IdH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <navigationController storyboardIdentifier="LogoutBarItem" id="zUT-YB-4wL" userLabel="LogoutTabBar" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="2" title="Logout" id="BwD-sh-Wkk" userLabel="Logout"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WGx-Us-h6A">
                        <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                </navigationController>
            </objects>
            <point key="canvasLocation" x="7159" y="2962"/>
        </scene>
        <!--LogoutTabBar-->
        <scene sceneID="inS-cj-cyP">
            <objects>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mmP-5G-chy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <navigationController id="pAh-fb-RjV" userLabel="LogoutTabBar" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="2" title="Login" id="TDR-AY-ce3" userLabel="Login"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aUa-I9-lOS">
                        <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                </navigationController>
            </objects>
            <point key="canvasLocation" x="7021" y="5044"/>
        </scene>
    </scenes>
</document>
