...
                                <rect key="frame" x="677" y="903" width="567" height="58"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="58" id="c6y-vi-OQR"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="32"/>
                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                <state key="normal" title="Get a New Code">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="didClickedAction:" destination="EaP-2B-TnE" eventType="primaryActionTriggered" id="HSg-It-i6C"/>
                                </connections>
                            </button>
...
