...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vcr-ib-lqU">
                                <rect key="frame" x="676" y="648" width="574" height="70"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                <state key="normal" title="OK"/>
                                <connections>
                                    <action selector="backToAccountSetting:" destination="srd-wa-9V9" eventType="primaryActionTriggered" id="znf-vf-xRc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bj2-EU-ZLF">
                                <rect key="frame" x="676" y="732" width="574" height="70"/>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="Csq-qE-h17"/>
                                    <constraint firstAttribute="width" constant="574" id="VOw-4V-4mT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                <state key="normal" title="Resend"/>
                                <connections>
                                    <action selector="resendEmail:" destination="srd-wa-9V9" eventType="primaryActionTriggered" id="8ia-tu-Ahu"/>
                                </connections>
                            </button>
                        </subviews>
                        <constraints>
...
